--- a/src/main.css
+++ b/src/main.css
@@ -236,7 +236,7 @@ body {
 
 #pop-up .text-content {
   flex-grow: 1;
-  padding-inline: 18px;
+  padding-inline: 36px;
   display: grid;
   place-content: center;
   text-align: center;
@@ -1168,17 +1168,18 @@ button#add-friend:active {
 
 .pending-card {
   background-color: #ffffff15;
-  padding: 1.5rem;
+  padding: 1.25rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 1.25rem;
+  color: #aaddff;
+  font-size: 16px;
 }
 
 .pending-card-buttons {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 8px;
 }
 
 .pending-card-buttons button {
@@ -1186,7 +1187,7 @@ button#add-friend:active {
   border: none;
   color: inherit;
   font-family: inherit;
-  font-size: 1rem;
+  font-size: 14px;
   font-weight: 700;
 }
 
@@ -1249,10 +1250,11 @@ button#add-friend:active {
 
 #friends-inbox .inbox-card {
   background-color: #ffffff15;
-  padding: 1.5rem;
+  padding: 1.25rem;
   display: flex;
   align-items: center;
-  font-size: 1.25rem;
+  color: #aaddff;
+  font-size: 16px;
 }
 
 #cyber-settings {
