--- a/src/main.css
+++ b/src/main.css
@@ -736,9 +736,10 @@ button#toggle-theme svg {
 }
 
 #cyber-friends-nav button {
+  position: relative;
   background-color: transparent;
-  margin-right: 1rem;
-  padding-inline: 12px;
+  margin-right: 30px;
+  padding-inline: 8px;
   border: none;
   color: inherit;
   font-family: inherit;
@@ -757,6 +758,20 @@ button#add-friend {
 button#add-friend:hover,
 button#add-friend:active {
   background-color: #0066ff99;
+}
+
+#friends-notif-count {
+  position: absolute;
+  top: -8px;
+  right: -12px;
+  background-color: #ff424277;
+  width: 18px;
+  height: 18px;
+  display: grid;
+  place-content: center;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 #cyber-friends-content {
@@ -1214,6 +1229,10 @@ button#add-friend:active {
   opacity: 60%;
 }
 
+#friends-pending .pending-card.unread {
+  background-color: #aaddff35;
+}
+
 #friends-inbox {
   position: relative;
   flex-grow: 1;
@@ -1277,12 +1296,20 @@ button#add-friend:active {
   font-size: 16px;
 }
 
-#friends-inbox .inbox-card .time {
+#friends-inbox .inbox-card.unread {
+  background-color: #aaddff35;
+  padding-right: 100px;
+}
+
+#friends-inbox .inbox-card.unread::before {
   position: absolute;
-  bottom: 8px;
-  right: 8px;
-  color: #aaddff99;
-  font-size: 10px;
+  top: auto;
+  right: 0;
+  width: 72px;
+  content: "New!";
+  color: #aaddff;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 #friends-empty-ui {
@@ -1291,7 +1318,7 @@ button#add-friend:active {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 12px;
+  gap: 48px;
 }
 
 #friends-empty-ui img {
