Add edit/delete message UI

--- a/src/main.css
+++ b/src/main.css
@@ -661,7 +661,7 @@ button#toggle-theme svg {
   gap: 30px;
 }
 
-#chat-messages button {
+#chat-messages > button {
   align-self: center;
   background-color: #aaddff25;
   padding: 8px 18px;
@@ -672,18 +672,70 @@ button#toggle-theme svg {
   font-size: 14px;
 }
 
-#chat-messages button:hover,
-#chat-messages button:active {
+#chat-messages > button:hover,
+#chat-messages > button:active {
   background-color: #aaddff35;
 }
 
 #chat-messages .message-card {
+  position: relative;
   display: flex;
   justify-content: flex-start;
+  gap: 6px;
 }
 
 #chat-messages .message-card.own {
   justify-content: flex-end;
+}
+
+#chat-messages .message-card .features-button {
+  z-index: 1;
+  position: absolute;
+  top: 30px;
+  right: 0;
+  align-self: flex-end;
+  background-color: transparent;
+  width: 47px;
+  height: 47px;
+  padding: 6px;
+  border: none;
+}
+
+#chat-messages .message-card .features-button svg {
+  fill: #aaddff70;
+}
+
+#chat-messages .message-card .features-button:hover,
+#chat-messages .message-card .features-button:active {
+  svg {
+    fill: #aaddff;
+  }
+}
+
+#chat-messages .message-card .features-container {
+  z-index: 1;
+  background-color: #303044;
+  border: 0.5px solid #aaddff77;
+  width: 100px;
+  height: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+#chat-messages .message-card .features-container button {
+  background-color: #aaddff15;
+  height: 50%;
+  padding: 0;
+  border: 0.5px solid #aaddff77;
+  text-align: center;
+  color: #aaddffcc;
+  font-size: 13px;
+  font-family: inherit;
+  font-weight: bold;
+}
+
+#chat-messages .message-card .features-container button:hover {
+  background-color: #aaddff30;
 }
 
 #chat-messages .message-card .container {
@@ -709,11 +761,11 @@ button#toggle-theme svg {
   font-size: 18px;
 }
 
-#chat-messages .container .sender-name.own {
+#chat-messages .message-card .sender-name.own {
   justify-content: flex-end;
 }
 
-#chat-messages .container .content {
+#chat-messages .message-card .content {
   flex-grow: 1;
   width: 100%;
   padding: 12px;
@@ -722,11 +774,15 @@ button#toggle-theme svg {
   font-size: 14px;
 }
 
-#chat-messages .container .content.sending {
+#chat-messages .message-card .content.own {
+  padding-right: 50px;
+}
+
+#chat-messages .message-card .content.sending {
   color: #888;
 }
 
-#chat-messages .container .time {
+#chat-messages .message-card .time {
   position: absolute;
   bottom: -18px;
   right: 4px;
@@ -734,7 +790,7 @@ button#toggle-theme svg {
   font-size: 10px;
 }
 
-#chat-messages .container .unread-indicator {
+#chat-messages .message-card .unread-indicator {
   position: absolute;
   top: 0;
   right: 12px;
