--- a/src/main.css
+++ b/src/main.css
@@ -577,12 +577,13 @@ button#toggle-theme svg {
 }
 
 .chat-card-pfp .indicator {
-  width: 12px;
-  height: 12px;
+  width: 18px;
+  height: 18px;
+  border: 4px solid #111;
   border-radius: 100%;
   position: absolute;
   bottom: 0;
-  right: 15px;
+  right: 10%;
 }
 
 .chat-card-info {
@@ -649,7 +650,8 @@ button#toggle-theme svg {
 }
 
 #chats-content-top .pfp img {
-  width: 72px;
+  width: 60px;
+  aspect-ratio: 1;
   border-radius: 100%;
 }
 
@@ -1236,12 +1238,13 @@ button#add-friend:active {
 }
 
 .friend-card-pfp .indicator {
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
+  border: 4px solid black;
   border-radius: 100%;
   position: absolute;
-  bottom: 22%;
-  right: 18%;
+  bottom: 18%;
+  right: 15%;
 }
 
 .friend-card-info {
