--- a/src/main.css
+++ b/src/main.css
@@ -1641,7 +1641,7 @@ button#add-friend:active {
 
 #account-pfp {
   position: relative;
-  width: 225px;
+  width: 240px;
   aspect-ratio: 1 / 1;
   border: 2px solid #aaddff99;
   overflow: hidden;
@@ -1650,6 +1650,21 @@ button#add-friend:active {
 #account-pfp > img {
   width: 100%;
   height: 100%;
+}
+
+#account-pfp > .error-info {
+  position: absolute;
+  bottom: 15%;
+  background-color: #ff000077;
+  width: 100%;
+  min-height: 15%;
+  padding: 8px;
+  display: grid;
+  place-content: center;
+  text-align: center;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 #account-pfp > button {
